gcc/testsuite/rust.test/compilable/str1.rs
fn main() {
    let a;
    a = "hello world infer";

    let b: &str;
    b = "hello world specified";
}
