gcc/testsuite/rust.test/fail_compilation/immutable2.rs
const TEST_CONST: i32 = 10;

fn main() {
    TEST_CONST = 1;
}
